--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baidu-tt",
+  "name": "baidu-stt",
   "version": "1.0.4",
   "description": "Baidu Speech to Text",
   "main": "index.js",
