--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baidu-stt",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Baidu Speech to Text",
   "main": "index.js",
   "repository": {
@@ -14,7 +14,7 @@
     "test": "node ./test.js"
   },
   "engines": {
-    "node": ">7.0"
+    "node": ">6.0"
   },
   "author": "aokihu <aokihu@gmail.com>",
   "license": "MIT",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "little-fetch": "^1.0.0",
-    "mic": "^2.1.2"
+    "mic": "^2.1.2",
+    "snowboy": "^1.2.0"
   }
 }
